--- a/Templates/index.html
+++ b/Templates/index.html
@@ -7,11 +7,14 @@
         <h1>
             Woo hoo a website
         </h1>
-        <div>
-            <li>
-                list
-                test 
-            </li>
+        <div class="video">
+                <iframe 
+                    id="ytplayer" 
+                    type="text/html" 
+                    width="640" 
+                    height="360"
+                    src="https://www.youtube.com/embed/6hJv5yBLe9c?autoplay=1&"
+                    frameborder="0"></iframe>
         </div>
     </body>
 </html>
