--- a/Templates/index.html
+++ b/Templates/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>Best Webserver Ever</title> 
+        <link rel="stylesheet" 
+            href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" 
+            integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" 
+            crossorigin="anonymous">
     </head>
     <body>
         <h1>
@@ -13,7 +17,7 @@
                     type="text/html" 
                     width="640" 
                     height="360"
-                    src="https://www.youtube.com/embed/6hJv5yBLe9c?autoplay=1&"
+                    src="https://www.youtube.com/embed/VKF5LCHZREg?autoplay=1"
                     frameborder="0"></iframe>
         </div>
     </body>
