--- a/Templates/index.html
+++ b/Templates/index.html
@@ -8,19 +8,19 @@
             crossorigin="anonymous">
     </head>
     <body>
-        <h1>
+        <h1 style="text-align:center;">
             Woo hoo a website
         </h1>
-        <div class="video">
+        <div class="video" style="text-align:center;">
                 <iframe 
                     id="ytplayer" 
                     type="text/html" 
-                    width="640" 
-                    height="360"
+                    width="1280" 
+                    height="640"
                     src="https://www.youtube.com/embed/VKF5LCHZREg?autoplay=1"
                     frameborder="0"></iframe> 
         </div>
-        <h2>
+        <h2 style="text-align:center;">
             Woo a website
         </h2>
     </body>
