Cleaned Front End

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Best Webserver Ever</title> 
-        <link rel="stylesheet" 
-            href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" 
-            integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" 
-            crossorigin="anonymous">
+        <title style="text-align:center">Vote for the cutest pets!</title> 
     </head>
     <body>
         <h1 style="text-align:center;">
             Woo hoo a website
         </h1>
-        <div class="video" style="text-align:center;">
-                <iframe 
-                    id="ytplayer" 
-                    type="text/html" 
-                    width="1280" 
-                    height="640"
-                    src="https://www.youtube.com/embed/VKF5LCHZREg?autoplay=1"
-                    frameborder="0"></iframe> 
-        </div>
-        <h2 style="text-align:center;">
-            Woo a website
-        </h2>
     </body>
 </html>
