--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang>
     <head>
         <title style="text-align:center">Vote for the cutest pets!</title> 
     </head>
