Okay this is everything minus the docker

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title style="text-align:center">Vote for the cutest pets!</title> 
+        <title style="text-align:center">Anarkitty: Order Cloned Kittens</title> 
     </head>
     <body>
         
                     <!-- HEADER TEXT -->
         <h1 style="text-align:center;">
-            Hint: the pics are buttons!
+            Click the kitten to order! You can order several of each!
+            Hint: the pics are buttons
         </h1>
         
 
@@ -19,7 +20,7 @@
 
                     <!-- TEXT 1 -->
             <h1 style="text-align:middle;">
-                Is this kitty the cutest?
+               Kitten #1
             </h1>
 
                     <!-- IMAGE 1 -->
@@ -31,7 +32,7 @@
 
                     <!-- TEXT 2 -->
             <h1 style="text-align:middle;">
-                Or is this one??
+                Kitten #2
             </h1>
 
                     <!-- IMAGE 2 -->
